--- a/NewNsns/NewNsns.Android/NewNsns.Android.csproj
+++ b/NewNsns/NewNsns.Android/NewNsns.Android.csproj
@@ -18,10 +18,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
+        <PackageReference Include="ReactiveUI" Version="18.4.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\NewNsns\NewNsns.csproj"/>
+        <ProjectReference Include="..\NewNsns\NewNsns.csproj" />
     </ItemGroup>
 </Project>
