--- a/NewNsns/NewNsns/NewNsns.csproj
+++ b/NewNsns/NewNsns/NewNsns.csproj
@@ -16,6 +16,9 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
+        <PackageReference Include="ReactiveUI" Version="18.4.1" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.4.2" />
     </ItemGroup>
 </Project>
