--- a/NewNsns/NewNsns.Desktop/NewNsns.Desktop.csproj
+++ b/NewNsns/NewNsns.Desktop/NewNsns.Desktop.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
         <PackageReference Include="ReactiveUI" Version="18.4.1" />
+        <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
     <ItemGroup>
