--- a/NewNsns/NewNsns.Android/NewNsns.Android.csproj
+++ b/NewNsns/NewNsns.Android/NewNsns.Android.csproj
@@ -18,9 +18,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11" />
         <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
+        <PackageReference Include="NP.Avalonia.Visuals" Version="1.0.33" />
         <PackageReference Include="ReactiveUI" Version="18.4.1" />
         <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
