--- a/NewNsns/NewNsns/NewNsns.csproj
+++ b/NewNsns/NewNsns/NewNsns.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11" />
         <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
@@ -18,8 +19,16 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
+        <PackageReference Include="NP.Avalonia.Visuals" Version="1.0.33" />
         <PackageReference Include="ReactiveUI" Version="18.4.1" />
+        <PackageReference Include="ReactiveUI.Fody" Version="18.4.1" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.4.2" />
         <PackageReference Include="xunit" Version="2.4.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Mono.Android">
+        <HintPath>C:\Program Files\dotnet\packs\Microsoft.Android.Ref.31\32.0.476\ref\net6.0\Mono.Android.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
