--- a/NewNsns/NewNsns.Android/NewNsns.Android.csproj
+++ b/NewNsns/NewNsns.Android/NewNsns.Android.csproj
@@ -20,6 +20,8 @@
     <ItemGroup>
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11" />
         <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Microsoft.Build" Version="17.4.0" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.4.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
         <PackageReference Include="NP.Avalonia.Visuals" Version="1.0.33" />
