--- a/NewNsns/NewNsns/NewNsns.csproj
+++ b/NewNsns/NewNsns/NewNsns.csproj
@@ -12,11 +12,13 @@
 
     <ItemGroup>
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11" />
-        <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview4" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Microsoft.Build" Version="17.4.0" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.4.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
         <PackageReference Include="NP.Avalonia.Visuals" Version="1.0.33" />
