--- a/NewNsns/NewNsns.Desktop/NewNsns.Desktop.csproj
+++ b/NewNsns/NewNsns.Desktop/NewNsns.Desktop.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
         <PackageReference Include="NP.Avalonia.Visuals" Version="1.0.33" />
         <PackageReference Include="ReactiveUI" Version="18.4.1" />
+        <PackageReference Include="Xamarin.Plugins.Clipboard" Version="2.3.0" />
         <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
